--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-get-random-values": "^1.3.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^9.2.1",
     "react-navigation": "^4.3.7",
     "react-navigation-stack": "^2.3.11",
     "reactotron-react-native": "^5.0.0",
